fix(pic-text): pic text result not showing properly

--- a/src/style.css
+++ b/src/style.css
@@ -390,6 +390,7 @@ input[type='number']::-webkit-outer-spin-button {
 .styled-input::-webkit-inner-spin-button,
 .styled-input::-webkit-outer-spin-button {
   -webkit-appearance: none;
+  appearance: none;
   margin: 0;
 }
 
@@ -492,13 +493,12 @@ input[type='number']::-webkit-outer-spin-button {
   word-wrap: break-word;
   margin-bottom: 1rem;
   background-color: var(--primary-color);
+}
+
+.output:not([data-result='pic-text'] > .output) {
   display: grid;
   place-items: center;
   font-size: clamp(20px, 1vw + 1rem, 3vw);
-}
-
-.output > p {
-  font-size: calc(1rem + 1vw) !important;
 }
 
 .download-output {
@@ -607,6 +607,7 @@ input[type='number']::-webkit-outer-spin-button {
     )
     border-box;
   -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: xor;
   mask-composite: exclude;
 }
@@ -642,6 +643,7 @@ input[type='number']::-webkit-outer-spin-button {
 
 input[type='range'] {
   -webkit-appearance: none;
+  appearance: none;
   margin: 2px;
   background: #cecece;
   border-radius: 5px;
@@ -662,6 +664,7 @@ input[type='range']::-webkit-slider-thumb {
 
 input[type='range']::-webkit-slider-runnable-track {
   -webkit-appearance: none;
+  appearance: none;
   box-shadow: none;
   border: none;
   background: transparent;
